--- a/package.json
+++ b/package.json
@@ -1,63 +1,62 @@
 {
-  "name": "paimonbot",
-  "version": "0.0.1",
-  "description": "My BOT",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "ChisdealHDYT",
-  "license": "MIT",
-  "dependencies": {
-    "@vitalets/google-translate-api": "^3.0.0",
-    "apex-api": "^3.1.0",
-    "axios": "^0.21.1",
-    "bitcoin-rpc-promise": "^2.1.6",
-    "blizzard.js": "^3.2.0",
-    "call-of-duty-api": "^1.1.7",
-    "chalk": "^4.1.0",
-    "cheerio": "^1.0.0-rc.3",
-    "clear": "^0.1.0",
-    "cli-table": "^0.3.1",
-    "discord-music-player": "^7.0.1",
-    "discord.js": "^12.5.1",
-    "discord.js-menu": "^2.2.2",
-    "download-file": "^0.1.5",
-    "enmap": "^5.8.2",
-    "get-json": "^1.0.1",
-    "google": "^2.1.0",
-    "google-tts-api": "0.0.4",
-    "guilded.js": "^1.1.2",
-    "https": "^1.0.0",
-    "i18n": "^0.13.2",
-    "moment": "^2.24.0",
-    "monero-rpc": "^0.5.0",
-    "ms": "^2.1.2",
-    "mysql": "^2.18.1",
-    "node-fetch": "^2.6.1",
-    "node-os-utils": "^1.3.2",
-    "node-virustotal": "^3.19.0",
-    "numeral": "^2.0.6",
-    "opusscript": "^0.0.7",
-    "os-name": "^4.0.0",
-    "os-utils": "0.0.14",
-    "pubg-api": "^1.1.2",
-    "puppeteer": "^2.0.0",
-    "quick.db": "^7.1.3",
-    "request": "^2.88.2",
-    "rss-parser": "^3.12.0",
-    "simple-youtube-api": "^5.2.1",
-    "snekfetch": "^4.0.4",
-    "socket.io-client": "^2.1.1",
-    "speedtest-net": "^1.6.0",
-    "steam-provider": "^0.3.2",
-    "string-progressbar": "^1.0.3",
-    "superagent": "^5.2.2",
-    "typescript": "^4.2.4",
-    "valid-url": "^1.0.9",
-    "warframe.js": "^1.3.2",
-    "ws": "^7.2.0",
-    "youtube-search": "^1.1.4"
-  },
-  "nodeVersion": "12.16.3"
+    "name": "djs",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node .",
+        "test": "node index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@blurtfoundation/blurtjs": "^1.0.0",
+        "@discordjs/opus": "^0.7.0",
+        "@discordjs/rest": "^0.4.1",
+        "@discordjs/voice": "^0.7.5",
+        "@hiveio/hive-js": "^2.0.4",
+        "@steemit/steem-js": "^0.7.11",
+        "apex-api": "^3.1.0",
+        "blizzard.js": "^3.2.0",
+        "body-parser": "^1.19.0",
+        "canvas": "^2.8.0",
+        "chalk": "^4.1.2",
+        "cli-table": "^0.3.1",
+        "common-tags": "^1.8.0",
+        "cron": "^2.0.0",
+        "dbd-dark-dashboard": "^1.6.56",
+        "discord-api-types": "^0.33.0",
+        "discord-dashboard": "^1.5.93",
+        "discord-music-player": "^8.3.2",
+        "discord-together": "^1.3.3",
+        "discord.js": "^13.1.0",
+        "download-file": "^0.1.5",
+        "entities": "^4.3.0",
+        "express": "^4.17.1",
+        "fortnite": "^4.3.2",
+        "glob": "^7.2.0",
+        "https": "^1.0.0",
+        "i18n": "^0.14.2",
+        "install": "^0.13.0",
+        "moment": "^2.29.3",
+        "ms": "^2.1.3",
+        "mysql": "^2.18.1",
+        "node-os-utils": "^1.3.2",
+        "os-name": "^4.0.0",
+        "os-utils": "^0.0.14",
+        "pet-pet-gif": "^1.0.9",
+        "request": "^2.88.2",
+        "rss-parser": "^3.10.0",
+        "speedtest-net": "^1.6.0",
+        "steam-provider": "^0.3.2",
+        "string-progressbar": "^1.0.4",
+        "twitch-m3u8": "^1.1.5",
+        "valid-url": "^1.0.9",
+        "vimm-chat-lib": "^1.1.0",
+        "warframe.js": "^1.3.3"
+    },
+    "devDependencies": {
+        "node": "^16.10.0"
+    }
 }
